--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -24,7 +24,7 @@
     <main class="container flex-grow-1 my-4" role="main">
 
         <!-- Mensaje de error (si aplica) -->
-        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <article class="card border-0 shadow rounded-3 overflow-hidden">
             <!-- Cabecera con color de marca -->
