--- a/GarciaMariaPablo/src/main/resources/templates/error.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="La página que estás buscando no existe o ha sido movida. Descubre cómo volver al inicio o contactar con soporte.">
+	<meta name="keywords" content="error 404, página no encontrada, soporte, inicio, URL incorrecta">
+	<meta name="robots" content="noindex, follow">
+	<meta name="author" content="Pablo Garcia Maria">
     <title>Error 404 - Página no encontrada</title>
 
     <!-- Bootstrap CSS -->
@@ -15,7 +19,7 @@
 
     <!-- En este no se puede importar por que las rutas son diferentes -->
     <!-- Icono Web -->
-    <link rel="shortcut icon" href="../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
+	<link rel="icon" href="../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
     <!-- Required Custom Css -->
     <link rel="stylesheet" href="../static/css/required.css" th:href="@{/css/required.css}">
 
