--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/head.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/head.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Icono Web -->
-    <link rel="shortcut icon" href="../../../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
+    <link rel="icon" href="../../../static/img/favicon.ico" th:href="@{img/favicon.ico}" type="image/x-icon">
 
     <!-- Required Custom Css -->
     <link rel="stylesheet" href="../../../static/css/required.css" th:href="@{/css/required.css}">
