--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -25,7 +25,7 @@
     <main class="container flex-grow-1 my-4" id="main-content">
 
         <section aria-labelledby="titulo-listado">
-            <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+            <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
 
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 id="titulo-listado" class="h4 mb-0 fw-bold">
