--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -30,7 +30,7 @@
 
   <!-- Contenido principal -->
   <main class="container flex-grow-1 my-4">
-    <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+    <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
 
     <section class="mb-4">
       <h1 class="h4 fw-bold">
