--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -25,7 +25,7 @@
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <main class="container flex-grow-1 my-4">
-        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section aria-labelledby="tituloListado">
             <div class="d-flex justify-content-between align-items-center mb-4">
