--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/formulario.html
@@ -23,7 +23,7 @@
     <header th:replace="~{admin/_fragments/header.html :: header}"></header>
 
     <main class="container flex-grow-1 my-4" role="main">
-        <div th:replace="~{admin/_fragments/errorMessage.html :: errorMessage}"></div>
+        <div th:replace="~{admin/_fragments/popUpMessages.html :: popUpMessages}"></div>
 
         <section class="card border-0 rounded-3 shadow" aria-labelledby="tituloFormularioUsuario">
             <div class="card-header bg-main text-white rounded-top-3 p-3">
