--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -74,11 +74,12 @@
                         </div>
 
                         <div class="col-md-3 mb-3" th:if="${modificar}">
-                            <label for="fechaCreacion" class="form-label fw-medium">
+                            <div class="form-label fw-medium" title="IEA significa Inicio del Estado Actual">
                                 <i class="bi bi-calendar me-1"></i>Fecha IEA
-                            </label>
-                            <input type="date" th:field="*{fechaCreacion}" th:data-fecha="*{fechaCreacion}"
-                                class="form-control form-control-lg"
+                            </div>
+                            <span th:text="*{fechaCreacion}" class="form-control form-control-lg pe-none"></span>
+
+                            <input type="hidden" th:field="*{fechaCreacion}" readonly th:data-fecha="*{fechaCreacion}"
                                 max="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" />
                         </div>
                     </div>
