Error: Al limpiar los filtros se pierden los desplegables solucionado | Modifica Date por DateTime | Añadido un aviso al tratar de eliminar un admin | Ajustadas las badges de usuarios

--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/footer.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/footer.html
@@ -31,6 +31,10 @@
                         <a href="../otros/contacto.html" th:href="@{/contacto}"
                            class="text-white-50 text-decoration-none hover-white">Contacto</a>
                     </li>
+                    <li class="mb-2">
+                        <a href="../otros/quienes-somos.html" th:href="@{/nosotros}"
+                           class="text-white-50 text-decoration-none hover-white">Quienes somos</a>
+                    </li>
                 </ul>
             </div>
 
