--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -98,7 +98,7 @@
                             <li>
                                 <a class="dropdown-item" href="../otros/quienes-somos.html" th:href="@{/nosotros}"
                                     title="Ver informacion sobre la empresa">
-                                    <i class="bi bi-people me-2" aria-hidden="true"></i> ¿Quienes somos?
+                                    <i class="bi bi-people me-2" aria-hidden="true"></i> Quienes somos
                                 </a>
                             </li>
                             <li>
