--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/formulario.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Visualiza, crea o modifica incidencias reportadas en el sistema. Gestiona ubicación, descripción, estado, técnicos y más detalles importantes." />
+    <meta name="description"
+        content="Visualiza, crea o modifica incidencias reportadas en el sistema. Gestiona ubicación, descripción, estado, técnicos y más detalles importantes." />
     <meta name="keywords" content="incidencia, crear, modificar, gestión de incidencias, técnicos, sistema, IT" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Pablo Garcia Maria" />
@@ -79,8 +80,11 @@
                             </div>
                             <span th:text="*{fechaCreacion}" class="form-control form-control-lg pe-none"></span>
 
-                            <input type="hidden" th:field="*{fechaCreacion}" readonly th:data-fecha="*{fechaCreacion}"
-                                max="${#dates.format(#dates.createNow(), 'yyyy-MM-dd')}" />
+                            <input type="hidden" th:field="*{fechaCreacion}" readonly
+                                th:value="*{fechaCreacion}"
+                                th:data-fecha="*{fechaCreacion}"
+                                th:attr="max=${#temporals.format(#temporals.createNow(), 'yyyy-MM-dd''T''HH:mm')}" />
+
                         </div>
                     </div>
 
@@ -185,8 +189,6 @@
                                 <input type="hidden" th:unless="${modificar}" th:field="*{estado}" />
                             </div>
                         </div>
-
-                        <input th:unless="${modificar}" type="hidden" th:field="*{fechaCreacion}" />
                     </div>
 
                     <!-- Botones -->
