--- a/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
@@ -233,7 +233,7 @@
                                         <div class="bg-primary bg-opacity-10 p-3 rounded-circle d-inline-block mb-3">
                                             <i class="bi bi-people fs-3 text-primary" aria-hidden="true"></i>
                                         </div>
-                                        <h3 class="card-title mt-2 h5" id="quienes-somos-title">¿Quienes somos?</h3>
+                                        <h3 class="card-title mt-2 h5" id="quienes-somos-title">Quienes somos</h3>
                                         <p class="card-text text-muted mb-4">Consultar informacion sobre la empresa</p>
                                         <a href="../otros/quienes-somos.html" th:href="@{/nosotros}"
                                             class="btn btn-outline-primary px-4">Ver</a>
