--- a/GarciaMariaPablo/src/main/resources/templates/admin/otros/quienes-somos.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/otros/quienes-somos.html
@@ -76,6 +76,8 @@
                             width="80" height="80" loading="lazy">
                         <div>
                             <h3 class="h6 fw-bold mb-1">Pablo Garcia Maria</h3>
+                            <p class="mb-0 small text-muted">Estudiante de Desarrollado | Arquitecto y Desarrollador del sistema</p>
+                            <p class="small text-muted mt-1">Especializado en Spring Boot, Java, Javascript, HTML, CSS y thymeleaf</p>
                         </div>
                     </div>
                 </div>
