Añadir paginas de error custom

--- a/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/_fragments/header.html
@@ -113,7 +113,7 @@
                     <!-- Opción adicional comentada -->
                     <!--
                     <li class="nav-item" th:classappend="${activeTab == 'error'} ? 'active'">
-                        <a class="nav-link" href="../../error.html" th:href="@{/error}" title="Página de error">
+                        <a class="nav-link" href="../../404.html" th:href="@{/error}" title="Página de error">
                             <i class="bi bi-exclamation-triangle" aria-hidden="true"></i> Error
                         </a>
                     </li>
