--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/formulario.html
@@ -12,7 +12,7 @@
     <title th:text="${modificar} ? 'Modificar Estado | Gestión de Incidencias' : 'Crear Estado | Gestión de Incidencias'">
         Gestión de Estados</title>
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
     <script defer src="../../../static/admin/javascript/estados/formulario/modificarVistaPrevia.js"
         th:src="@{/admin/javascript/estados/formulario/modificarVistaPrevia.js}"></script>
