--- a/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/estado/listar.html
@@ -10,7 +10,7 @@
 
     <title>Listado de Estados | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
     <!-- Javascript -->
     <script defer src="../../../static/admin/javascript/estados/listar/buscarFiltros.js"
