--- a/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/otros/paginaPrincipal.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" href="../../../static/img/favicon.ico" th:href="@{img/favicon.ico}" type="image/x-icon">
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
     <script defer src="../../../static/admin/javascript/paginaPrincipal/buscarSecciones.js"
         th:src="@{/admin/javascript/paginaPrincipal/buscarSecciones.js}"></script>
