--- a/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/usuario/listar.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../../../static/img/favicon.ico" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <title>Lista de Usuarios | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
     <!-- JavaScript -->
     <script defer src="../../../static/admin/javascript/usuarios/listar/borrarUsuario.js" th:src="@{/admin/javascript/usuarios/listar/borrarUsuario.js}"></script>
