--- a/GarciaMariaPablo/src/main/resources/templates/global/contacto.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/contacto.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="contacto, soporte técnico, ayuda, consultas, gestión de incidencias">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Pablo Garcia Maria">
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
 </head>
 
