--- a/GarciaMariaPablo/src/main/resources/templates/global/index.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Pablo Garcia Maria">
     <title>Pagina principal | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
 </head>
 
