--- a/GarciaMariaPablo/src/main/resources/templates/global/login.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/login.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="index, follow">
     <title>Iniciar Sesión | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
     <script th:src="@{/js/login/mostrarContraseña.js}" src="../../static/js/login/mostrarContraseña.js" defer></script>
 </head>
 
