--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/estadisticas.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="../../../static/img/favicon.ico" th:href="@{/img/favicon.ico}" type="image/x-icon" />
   <title>Estadísticas | Gestión de Incidencias</title>
 
-  <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+  <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
   <!-- JavaScript -->
   <script defer src="../../../static/admin/javascript/incidencias/estadisticas/generarEstadisticas.js"
