--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/inspeccionar.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="../../../static/img/favicon.ico" th:href="@{img/favicon.ico}" type="image/x-icon">
     <title>Detalle de Incidencia | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
