--- a/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
+++ b/GarciaMariaPablo/src/main/resources/templates/admin/incidencia/listar.html
@@ -12,7 +12,7 @@
     
     <title>Listado de Incidencias | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{admin/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
     <!-- JavaScript -->
     <script defer th:src="@{/admin/javascript/incidencias/listar/borrarIncidencia.js}"></script>
