--- a/GarciaMariaPablo/src/main/resources/templates/error/404.html
+++ b/GarciaMariaPablo/src/main/resources/templates/error/404.html
@@ -9,12 +9,8 @@
 	<meta name="robots" content="noindex, follow">
 	<meta name="author" content="Pablo Garcia Maria">
     <title>Error 404 | Gestión de Incidencias</title>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel="icon" href="../static/img/favicon.png" th:href="@{/img/favicon.png}" type="image/x-icon">
-    <link rel="stylesheet" href="../static/css/required.css" th:href="@{/css/required.css}">
 
 </head>
 
@@ -47,8 +43,11 @@
             </ul>
             
             <div class="mt-4 pt-3 border-top">
-                <a th:href="@{/}" class="btn btn-primary me-2">
-                    <i class="bi bi-house-door me-1"></i>Ir al Inicio
+                <a th:href="@{/}" href="../global/index.html" class="btn btn-primary me-2">
+                    <i class="bi bi-house-door me-1"></i><span>Ir al Inicio</span>
+                </a>
+                <a th:href="@{/dashboard}" href="../global/index.html" class="btn btn-primary me-2">
+                    <i class="bi bi-briefcase me-1"></i> <span>Ir al dashboard</span>
                 </a>
             </div>
         </div>
