--- a/GarciaMariaPablo/src/main/resources/templates/global/faq.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/faq.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="FAQ, ayuda, soporte, gestión incidencias, preguntas frecuentes">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Pablo Garcia Maria">
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
