--- a/GarciaMariaPablo/src/main/resources/templates/global/politica-privacidad.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/politica-privacidad.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Pablo Garcia Maria">
 
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 
 </head>
 
