--- a/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/quienes-somos.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Pablo Garcia Maria">
 
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
