--- a/GarciaMariaPablo/src/main/resources/templates/global/register.html
+++ b/GarciaMariaPablo/src/main/resources/templates/global/register.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index, follow">
     <title>Registro | Gestión de Incidencias</title>
 
-    <th:block th:replace="~{global/_fragments/head.html :: head}"></th:block>
+    <th:block th:replace="~{_fragments/head.html :: head}"></th:block>
     <script th:src="@{/js/register/mostrarContraseña.js}" src="../../static/js/register/mostrarContraseña.js"
         defer></script>
     <script th:src="@{/js/register/comprobarContraseñas.js}" src="../../static/js/register/comprobarContraseñas.js"
